# twitter_emo_classification

./: .gitignore  README.md  big_sketch_notebook.ipynb  config.toml  download_dependencies.bat  download_dependencies.sh  emotion_classification.ipynb  pyproject.toml  requirements.txt
notebooks/: evaluation_nb.ipynb  merge_dataset_nb.ipynb  train.ipynb
scripts/: download_data.py  make_dictionary.py  merge_data.py  remove_outliers.py  run_scripts.bat  run_scripts.sh
src/: PreprocessPipeline.py  VocabBuilder.py  data_analysis.ipynb  merge_dataset_nb.ipynb  preprocess.ipynb  preprocess_dataset.ipynb
src/models/: EmoBaseline.py  EmoLSTM.py
src/notebooks/: data_analysis.ipynb
